[package]
name = "bladerf-nbfm-transceiver"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "1.0.0"
clap = { version = "4.5.31", features = ["derive"] }
dasp = { version = "0.11.0", features = [
    "interpolate",
    "interpolate-sinc",
    "ring_buffer",
] }
hound = "3.5.1"
itertools = "0.14.0"
num = "0.4.3"
plotly = "0.12.1"
symphonia = "0.5.4"
