[package]
name = "bladerf-nbfm-transceiver"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "1.0.0"
clap = { version = "4.5.31", features = ["derive"] }
dasp = { version = "0.11.0", features = [
    "interpolate",
    "interpolate-sinc",
    "ring_buffer",
] }
hound = "3.5.1"
itertools = "0.14.0"
num = "0.4.3"
plotly = "0.12.1"
symphonia = "0.5.4"
bladerf = { path = "../seify-bladerf" }
ndarray = "0.16.1"
ndarray-conv = "0.4.1"
log = "0.4.26"
ctrlc = "3.4.5"
anyhow = "1.0.97"
indicatif = "0.17.11"
pretty_env_logger = "0.5.0"
cpal = "0.15.3"
crossterm = "0.28.1"
alsa = "0.9.1"
tinyaudio = "1.1.0"
rodio = "0.20.1"
futuresdr = { version = "0.0.37", features = ["audio"] }
websocket = "0.27.1"
